Fix copyright label overflowing its container. (#2224)

--- a/themes/finna2/less/finna/image-popup.less
+++ b/themes/finna2/less/finna/image-popup.less
@@ -465,9 +465,6 @@
         text-align: center;
         display: inline;
     }
-    span.copyright-label {
-        white-space: nowrap;
-    }
 }
 
 .cc-rights img.creative-commons {
